[package]
name = "vye-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[features]
frb-compat = []

[dependencies]
convert_case = "0.10.0"
darling = "0.23.0"
either = "1.15.0"
proc-macro-crate = "3.4.0"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.111", features = ["full", "extra-traits"] }
