[package]
name = "vye"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
frb-compat = ["vye-base/frb-compat"]
tokio = ["vye-base/tokio"]
macros = ["dep:vye-macros"]
std = ["vye-base/std"]

[dependencies]
vye-base = { version = "0.1.0", path = "../base" }
vye-macros = { version = "0.1.0", path = "../macros", optional = true }
